--- a/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
+++ b/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>0.15.5.2</Version>
-    <AssemblyVersion>0.15.5.2</AssemblyVersion>
+    <Version>0.15.7-rc5</Version>
+    <AssemblyVersion>0.15.7.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
