--- a/Tinode.ChatBot/Tinode.ChatBot.csproj
+++ b/Tinode.ChatBot/Tinode.ChatBot.csproj
@@ -2,23 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.15.5.3</Version>
+    <Version>0.15.7-rc5</Version>
     <Description>This is a rudimentary chatbot for Tinode using gRPC API. It's written in .Net standard as a demonstration that the API is language-independent.</Description>
     <Copyright>Tinode</Copyright>
-    <PackageLicenseUrl>https://github.com/tinode/chat/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/tinode/csharpbot/blob/master/LICENSE</PackageLicenseUrl>
     <Authors>BenDerPan</Authors>
     <Product>Tinode</Product>
     <Company>Tinode</Company>
-    <PackageProjectUrl>https://github.com/tinode/chat</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/tinode/csharpbot</PackageProjectUrl>
     <PackageIconUrl>https://github.com/tinode/chat/blob/master/docs/logo.svg</PackageIconUrl>
     <PackageTags>Tinode Chatbot</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/tinode/chat</RepositoryUrl>
+    <RepositoryUrl>https://github.com/tinode/csharpbot</RepositoryUrl>
     <RepositoryType>github.com</RepositoryType>
     <PackageReleaseNotes>Build your own chatbot easy with .net or .net core.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>0.15.5.2</AssemblyVersion>
-    <FileVersion>0.15.5.2</FileVersion>
+    <AssemblyVersion>0.15.7.0</AssemblyVersion>
+    <FileVersion>0.15.7.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
