--- a/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
+++ b/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>0.15.7-rc5</Version>
+    <Version>0.15.7</Version>
     <AssemblyVersion>0.15.7.0</AssemblyVersion>
   </PropertyGroup>
 
