Add upload large attachment feature, and make IBotResponse interface async

--- a/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
+++ b/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     <PackageReference Include="Grpc" Version="1.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="RestSharp" Version="106.5.4" />
   </ItemGroup>
 
   <ItemGroup>
