--- a/Tinode.ChatBot/Tinode.ChatBot.csproj
+++ b/Tinode.ChatBot/Tinode.ChatBot.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Grpc" Version="1.15.0" />
     <PackageReference Include="Grpc.Tools" Version="1.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="RestSharp" Version="106.5.4" />
   </ItemGroup>
 
 </Project>
