--- a/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
+++ b/Tinode.ChatBot.DemoNetCore/Tinode.ChatBot.DemoNetCore.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>0.15.9</Version>
-    <AssemblyVersion>0.15.8.0</AssemblyVersion>
+    <Version>0.15.11</Version>
+    <AssemblyVersion>0.15.11.0</AssemblyVersion>
+    <FileVersion>0.15.11.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
