--- a/Tinode.ChatBot/Tinode.ChatBot.csproj
+++ b/Tinode.ChatBot/Tinode.ChatBot.csproj
@@ -20,7 +20,7 @@
     <AssemblyVersion>0.16.10.0</AssemblyVersion>
     <FileVersion>0.16.10.0</FileVersion>
     <PackageIcon>logo192.png</PackageIcon>
-    <PackageLicenseExpression>GPLv3</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
