--- a/Tinode.ChatBot/Tinode.ChatBot.csproj
+++ b/Tinode.ChatBot/Tinode.ChatBot.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>0.17.10</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.18.1</Version>
     <Description>This is a rudimentary chatbot for Tinode using gRPC API. It's written in .Net standard as a demonstration that the API is language-independent.</Description>
     <Copyright>Tinode</Copyright>
     <PackageLicenseUrl></PackageLicenseUrl>
@@ -18,17 +18,20 @@
     <PackageReleaseNotes>Build your own chatbot easy with .net or .net core.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
     <AssemblyVersion>0.17.10.0</AssemblyVersion>
-    <FileVersion>0.17.10.0</FileVersion>
+    <FileVersion>0.18.1.0</FileVersion>
     <PackageIcon>logo192.png</PackageIcon>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.15.0" />
-    <PackageReference Include="Grpc" Version="1.15.0" />
-    <PackageReference Include="Grpc.Tools" Version="1.15.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="RestSharp" Version="106.12.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.19.4" />
+    <PackageReference Include="Grpc" Version="2.44.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.44.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="107.3.0" />
   </ItemGroup>
 
   <ItemGroup>
